2018-04-02
- Synched German patterns [de-1901, de-ch-1901, de-1996] with upstream (dehyph-exptl) 2018-03-31.
  By the German hyphenation patterns team.
  
2018-03-25
- Switched Bulgarian patterns to a different set, by Anton Zinoviev.  Removed out-of-date documentation.

2017-09-13
- Liturgical Latin [la-x-liturgic] Fix form of possum and quoties, by Claudio Beccari and Élie Roux

== CTAN release 2017.05.18 ==

2017-05-18
- Added a missing pattern for Latin, version 3.201 (by Claudio Beccari)

2017-05-08
- Updated all German [de-1901, de-ch-1901, de-1996] patterns to the latest version
  provided by dehyph-exptl (2017-03-31).  By the German hyphenation pattern working group

2017-01-20
- Synched Liturgical Latin [la-x-liturgic] patterns with their source
  at the Gregorio project (by Élie Roux)

2017-10-17
- Updated Church Slavonic [cu] patterns to version 1.1 (by Mike Kroutikov)

2017-10-01
- Added Belarusian [be] patterns (by Maksim Salau)

2016-05-19
- update Liturgical Latin patterns (by Claudio Beccari), version 1.040

== CTAN release 2016.05.16 ==

2016-05-16
- Added support for curled beta (ϐ U+03D0 GREEK BETA SYMBOL) in Ancient Greek patterns, UTF-8 version

2016-05-14
- add Liturgical Latin patterns (by Claudio Beccari)

2016-05-14
- Change righthyphenmin in hyphen-french.tlpsrc to 2

2016-05-12 (c060b6d)
- Added four patterns in French to prevent breaks before apostrophes

2016-04-17 (#744, #745)
- Added Church Slavonic patterns (by Mike Kroutikov and Aleksandr Andreev)

2016-03-21 (#735, #736)
- Added MIT licence for Irish [ga], Cyrillic Mongolian [mn-cyrl], Turkmen [tk]
- Added “Unicode licence” for Croatian [hr]
- Added text of “Unicode licence” to hyph-en-gb.tex(unicode-licence)

2016-03-20 (#733)
- Put French patterns under the MIT licence.

2016-03-19 (#729, #731)
- Added MIT licence for Welsh [cy], Danish [da], Slovenian [sl]; “Unicode licence” for Basque [eu]
- Added hyph-en-gb.tex(unicode-licence)

== CTAN release 2016.02.17 (#725) ==
