@@ -1,0 +1,18 @@
+category TLCore
+depend hyphen-base
+depend hyph-utf8
+shortdesc Pali hyphenation patterns.
+longdesc Pali hyphenation patterns in UTF-8 encoding
+execute AddHyphen \
+	name=pali \
+	lefthyphenmin=1 \
+	righthyphenmin=2 \
+	file=loadhyph-pi.tex \
+	file_patterns=hyph-pi.pat.txt \
+	file_exceptions=
+runpattern f texmf-dist/tex/generic/hyph-utf8/loadhyph/loadhyph-pi.tex
+runpattern f texmf-dist/tex/generic/hyph-utf8/patterns/tex/hyph-pi.tex
+runpattern f texmf-dist/tex/generic/hyph-utf8/patterns/txt/hyph-pi.chr.txt
+runpattern f texmf-dist/tex/generic/hyph-utf8/patterns/txt/hyph-pi.hyp.txt
+runpattern f texmf-dist/tex/generic/hyph-utf8/patterns/txt/hyph-pi.lic.txt
+runpattern f texmf-dist/tex/generic/hyph-utf8/patterns/txt/hyph-pi.pat.txt
