@@ -1,0 +1,37 @@
+% filename: loadhyph-pi.tex
+% language: pali
+%
+% Loader for hyphenation patterns, generated by
+%     source/generic/hyph-utf8/generate-pattern-loaders.rb
+% See also http://tug.org/tex-hyphen
+%
+% Copyright 2008-2016 TeX Users Group.
+% You may freely use, modify and/or distribute this file.
+% (But consider adapting the scripts if you need modifications.)
+%
+% Once it turns out that more than a simple definition is needed,
+% these lines may be moved to a separate file.
+%
+\begingroup
+% Test for pTeX
+\ifx\kanjiskip\undefined
+% Test for native UTF-8 (which gets only a single argument)
+% That's Tau (as in Taco or ΤΕΧ, Tau-Epsilon-Chi), a 2-byte UTF-8 character
+\def\testengine#1#2!{\def\secondarg{#2}}\testengine Τ!\relax
+\ifx\secondarg\empty
+    % Unicode-aware engine (such as XeTeX or LuaTeX) only sees a single (2-byte) argument
+    \message{UTF-8 Pali hyphenation patterns}
+    % Set \lccode for ZWNJ and ZWJ.
+    \lccode"200C="200C
+    \lccode"200D="200D
+    \input hyph-pi.tex
+\else
+    % 8-bit engine (such as TeX or pdfTeX)
+    \message{No Pali hyphenation patterns - only for Unicode engines}
+    %\input zerohyph.tex
+\fi\else
+    % pTeX
+    \message{No Pali hyphenation patterns - only for Unicode engines}
+    %\input zerohyph.tex
+\fi
+\endgroup
