@@ -1,0 +1,32 @@
+aA
+bB
+cC
+dD
+eE
+gG
+hH
+iI
+jJ
+kK
+lL
+mM
+nN
+oO
+pP
+rR
+sS
+tT
+uU
+vV
+yY
+ñÑ
+āĀ
+īĪ
+ūŪ
+ḍḌ
+ḷḶ
+ṁṀ
+ṃṂ
+ṅṄ
+ṇṆ
+ṭṬ
