@@ -1,3 +1,6 @@
+2018-04-25
+- Added patterns for Pāli, by Wie-Ming Cittānurakkho Bhikkhu
+
 2018-04-02
 - Synched German patterns [de-1901, de-ch-1901, de-1996] with upstream (dehyph-exptl) 2018-03-31.
   By the German hyphenation patterns team.
